# goit-ds-hw-023

./: authors.json  pyproject.toml  quotes.json  scraping.py
