[tool.poetry]
name = "goit-ds-hw-023"
version = "0.1.0"
description = ""
authors = ["kzacurry30 <102797063+kzacurry30@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
